inserto algunos cambios