@@ -1,12 +1,12 @@
 package es.daw.foodexpressmvc.service;
 
-
 import es.daw.foodexpressmvc.dto.RestaurantDTO;
 import es.daw.foodexpressmvc.exception.ConnectionApiRestException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -19,19 +19,23 @@ public class RestaurantsService {
 
         RestaurantDTO[] restaurants;
 
-        try{
-            restaurants = webClientAPI.get()
+        try {
+            restaurants = webClientAPI
+                    .get()
                     .uri("/restaurants")
                     .retrieve()
                     .bodyToMono(RestaurantDTO[].class)
-                    .block();
-        }catch(Exception e){
-            // Pendiente crear excepcion propia
-            // Pendiente crear el global exceptionHandler : que lea la excepcion y redirija a api-error
+                    .block(); //asíncrono
+        }catch (Exception e){
+            // Pendiente crear excepción propia
+            // Pendiente crear Globla ExceptionHancler: que lea la exceión y redirija a api-error
+            //
             throw new ConnectionApiRestException("Could not connect to FoodExpress API");
         }
 
-        return List.of(restaurants);
-    }
+        return Arrays.asList(restaurants);
 
-} 
+
+
+    }
+}
